# seo-agent

./: .env.template  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  Makefile  NEXT_STEPS.md  Pipfile  README.md  README_UI.md  api.py  audit_results.md  blog_post.txt  cli.py  config.yaml  dependency_management.md  development.md  docker-compose.yml  lefthook.yml  llm-full.txt  llm.txt  main.py  mypy.ini  optimized-content.txt  pdm_setup.md  pipenv_setup.md  poetry_setup.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sample_content.txt  setup.cfg  setup.py  setup_dev.sh  start-dev.sh  test_article_generator.py  test_database.py  test_keywords.py  utils.py
.github/workflows/: lint.yml  python-tests.yml
api/: Dockerfile  README.md  main.py  requirements.txt
api/tests/: test_api.py
data/exports/: .gitkeep  keywords_report_2025_05_21.json  keywords_report_2025_05_22.csv  keywords_report_2025_05_22.json
frontend/: Dockerfile  README.md  biome.json  drizzle.config.ts  jest.config.js  jest.setup.js  lefthook.yml  package.json  pnpm-lock.yaml
frontend/drizzle/: 0000_chemical_thing.sql
frontend/src/: middleware.ts
scripts/: build_llm_docs.py
seo_agent/: __init__.py
seo_agent/core/: advanced_content_optimizer.py  article_generator.py  backlink_analyzer.py  backlink_analyzer_improved.py  content_optimizer.py  database.py  dspy_modules.py  image_alt_generator.py  keyword_engine.py  site_auditor.py  site_auditor_improved.py
seo_agent/templates/: email_templates.txt
seo_agent/utils/: __init__.py  report_generator.py  serp_api.py  web_scraper.py
tests/: __init__.py  conftest.py  test_basic.py  test_build_llm_docs.py  test_utils.py
tests/core/: __init__.py  test_backlink_analyzer.py  test_backlink_analyzer_improved.py  test_content_optimizer.py  test_keyword_engine.py  test_site_auditor.py
tests/mock/: __init__.py  (+4 more)
(+33 files in other folders)
